2001-02-19 11:15 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * harbour/include/hbrddntx.h
     * Forgot to upload last time

2001-02-19 10:15 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * harbour/source/rdd/dbfntx/dbfntx1.c
     * fixes and improvements

2001-02-17 16:00 GMT -3 Luiz Rafael Culik <culik@sl.conex.net>
   *utils/hbmake/hbmake.prg
      *Fixed an small bug regarding the number of select files on editor mode

2001-02-16 23:40 UTC-0800 Brian Hays <bhays@abacuslaw.com>
   * source/rtl/tget.prg
      * added Updating of Buffer to UpdateBuffer
      * added 0+Value to avoid changing the display lengths of numerics
   * contrib/rdd_ads/ads1.c
      * the last final ultimate fix to numeric seeks.  really.

2001-02-16 11:20 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * harbour/source/rdd/dbfntx/dbfntx1.c
     * fixes and improvements

2001-02-15 11:10 UTC-0800 Brian Hays <bhays@abacuslaw.com>
   * contrib/rdd_ads/ads1.c
      * implemented the DESCENDING flag in index creation
      * fixed dbOrderInfo(DBOI_KEYVAL) to return "" instead of garbage at EOF
            DBOI_NAME and many others to return correct empty values
               instead of garbage if in natural order
      * fixed SEEK on numeric indexes
      + added support for dbOrderInfo(DBOI_FULLPATH) AND dbInfo(DBI_FULLPATH)

   * contrib/rdd_ads/ads.ch
      * Commented out ADS_TOP and ADS_BOTTOM with a note to use TOPSCOPE
         and BOTTOMSCOPE instead.

   * contrib\rdd_ads\doc\en\readme.txt
      * minor clarifications

2001-02-15 13:15 GMT+3 Alexander Kresin <alex@belacy.belgorod.su>
   * harbour/include/hbrddntx.h
   * harbour/source/rdd/dbfntx/dbfntx1.c
     * Locking of index file while moving/updating in shared mode
       ( don't sure that it's done absolutely right, should be tested ).

2001-02-14 23:10 UTC-0800 Ron Pinkas <ron@profit-master.com>
   * source/pp/ppcore.c
     ! Fixed space removal within [] in strotrim() when not processing MP or RP.
